add prepare script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "pnpm lint:fix && rimraf dist && tsc && pnpm build:es",
     "build:es": "tsc --module ESNEXT --outDir dist/es",
     "lint:fix": "eslint --fix ./src/**/*.ts",
+    "prepare": "pnpm build",
     "release": "pnpm build && bumpp --push --tag --commit && npm publish"
   },
   "files": [
