--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsc -w",
-    "build": "pnpm lint:fix && rimraf dist && tsc && pnpm build:es",
+    "build": "npm lint:fix && rimraf dist && tsc && npm build:es",
     "build:es": "tsc --module ESNEXT --outDir dist/es",
     "lint:fix": "eslint --fix ./src/**/*.ts",
-    "prepare": "pnpm build",
-    "release": "pnpm build && bumpp --push --tag --commit && npm publish"
+    "prepare": "npm build",
+    "release": "npm build && bumpp --push --tag --commit && npm publish"
   },
   "files": [
     "dist",
